# Project-Aaedn

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE_GUIDE.md  README.md  ROADMAP.md  index.afr  model.abn  tokenizer.abt
.github/workflows/: ci.yml  release.yml
.opencode/sk/aaedn-enforcer/: SKILL.md
docs/: fbd.md  mpd.md  prd.md  sdd.md  uiux.md
include/: agent.hpp  arena.hpp  attention.hpp  bandwidth.hpp  config.hpp  dequant.hpp  dot.hpp  ffn.hpp  fused_matmul.hpp  kvcache.hpp  layer_fusion.hpp  logger.hpp  matmul.hpp  model.hpp  quant.hpp  quant_oracle.hpp  rag.hpp  rmsnorm.hpp  rope.hpp  smt.hpp  softmax.hpp  tensor.hpp  thread.hpp  tokenizer.hpp  transformer.hpp
src/: agent.cpp  arena.cpp  attention.cpp  bandwidth.cpp  config.cpp  dequant.cpp  dot.cpp  ffn.cpp  fused_matmul.cpp  kvcache.cpp  layer_fusion.cpp  logger.cpp  main.cpp  matmul.cpp  model.cpp  quant.cpp  quant_oracle.cpp  rag.cpp  rmsnorm.cpp  rope.cpp  smt.cpp  softmax.cpp  tensor.cpp  thread.cpp  tokenizer.cpp  transformer.cpp
tests/: test_arena  test_arena.cpp  test_artifact_roundtrip.cpp  test_matmul  test_matmul.cpp  test_startup_failure.cpp  test_tensor  test_tensor.cpp
tools/: benchmark.py  convert_model.py  convert_tokenizer.py  generate_rag_index.py
